# intake-skill

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: prd.md  rfc.md  test.md  working.md
examples/sample_audio/: sample.m4a
prompts/: codex_postprocess.md  installer_checklist.md
scripts/: intake
skills/: skill_intake.md
src/intake_skill/: __init__.py  asr.py  audio.py  cli.py  config.py  cron.py  dashboard.py  postprocess.py  sync.py
tests/: test_asr_postprocess.py  test_cli.py  test_cron.py  test_dashboard.py  test_run_day_audio.py  test_sync.py
