[project]
name = "intake-skill"
version = "0.1.0"
description = "Agent-oriented Voice Memos intake CLI with sync, Qwen ASR, and daily postprocessing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]
qwen-asr = [
    "mlx-qwen3-asr>=0.3.2",
]

[project.scripts]
intake-skill = "intake_skill.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
